5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4069/executions/1643_2703.log
== TEST (2019-04-10 19:06:17) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	 cidadao = eleitor
else:
	cidadao = nao_eleitor
print(cidadao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cidadao = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:06:23) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	 cidadao = eleitor
else:
	cidadao = nao_eleitor
print(cidadao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cidadao = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:06:33) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = eleitor
else:
	cidadao = nao_eleitor
print(cidadao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cidadao = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:07:01) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:07:08) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- EXECUTION TIME:
0.134276
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:21:59) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:22:02) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:22:04) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:22:04) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:22:04) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:22:08) 
-- CODE:
x = float(input("qual a idade: "))

if ( x >= 18 ):
	cidadao = "eleitor"
else:
	cidadao = "nao_eleitor"
print(cidadao)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
